--- a/.github/workflows/deploy-dags_dev2prod.yml
+++ b/.github/workflows/deploy-dags_dev2prod.yml
@@ -15,7 +15,7 @@ jobs:  # 定义作业
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          token: ${{ secrets.PAT_TOKEN }}
+          token: ${{ secrets.ACTION_TOKEN}}
           
       - name: Configure Git
         run: |
