update action wf

--- a/.github/workflows/deploy-dags_dev2prod.yml
+++ b/.github/workflows/deploy-dags_dev2prod.yml
@@ -27,12 +27,12 @@ jobs:  # 定义作业
           # 获取 staging 分支最新的 DAG 文件
           git checkout staging
           
-          # 切换到main分支（生产环境分支）
-          git checkout main
-          
-          # 创建新的同步分支（使用时间戳确保唯一性）
+          # 设置分支名称并将其导出为环境变量
           TIMESTAMP=$(date +%Y%m%d_%H%M%S)
           BRANCH_NAME="sync-dags-to-prod-${TIMESTAMP}"
+          echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_ENV
+          
+          git checkout main
           git checkout -b $BRANCH_NAME
           
           # 从 staging 分支复制 DAG 文件
