--- a/dbt/nyc_taxi_warehouse/dbt_project.yml
+++ b/dbt/nyc_taxi_warehouse/dbt_project.yml
@@ -1,4 +1,3 @@
-
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
@@ -31,4 +30,18 @@ clean-targets:         # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   nyc_taxi_warehouse:
-    +materialized: view
+    raw:
+      +schema: raw_dataset
+      +schema_prefix: false
+    staging:
+      +schema: staging_dataset
+      +schema_prefix: false
+    intermediate:
+      +schema: intermediate_dataset
+      +materialized: view
+    core:
+      +schema: core_dataset
+      +materialized: view
+    marts:
+      +schema: mart_dataset
+      +materialized: view
